ADDED SEARCH FEATURE

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
       name="description"
       content="Shivira - Your Ultimate Travel Experience"
     />
-    <title>SHIVIRA</title>
+    <title>Shivira - Travelling Agency for Tour Packages</title>
   </head>
   <body>
     
